--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    max-width: 100vw;
     background-color: #0E131E;
     font-family: "Inter", sans-serif;
     background-size: cover;
@@ -206,7 +207,7 @@ body::-webkit-scrollbar {
   }
   
   body::-webkit-scrollbar-track {
-    background:  #1B2838;          
+    background:  #2d343e;          
   }
   
   body::-webkit-scrollbar-thumb {
