--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -11,6 +12,10 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     overflow-x: hidden;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 header {
@@ -23,8 +28,9 @@ header {
 }
 
 .nav-notifications {
+    width: 90%;
     display: flex;
-    gap: 65rem;
+    justify-content: space-between;
 }
 
 nav {
@@ -41,7 +47,7 @@ nav {
 
 .notifications {
     display: flex;
-    gap: 50px;
+    gap: 25px;
 }
 
 .perfil {
@@ -52,7 +58,8 @@ nav {
 .perfil__imagem {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
+    border-radius: 100%;
+    object-fit: fill;
 }
 
 #bell {
@@ -102,6 +109,13 @@ nav {
     color: #FFFFFF;
     margin-top: 19px;
     font-weight: 700;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
+}
+
+.sp__botao:hover {
+    transform: scale(1.1);
+    margin-left: 10px;
 }
 
 .pagination {
@@ -156,13 +170,17 @@ li {
     margin-top: 60px;
 }
 
+.search-box {
+    position: relative;
+}
+
 .search {
     width: 75rem;
     height: 60px;
     background-color: #1B2838;
     border: none;
     border-radius: 4px;
-    padding: 10px 20px;
+    padding: 10px 40px;
     outline-style: none;
     color: #8d8d8d;
     font-size: 18px;
@@ -174,8 +192,10 @@ li {
 
 .lupa {
     position: absolute;
-    top: 89.3%; 
-    right: 19.6%;
+    top: 50%;
+    bottom: 50%;
+    right: 2%;
+    margin: auto;
 }
 
 .secao-quarternaria {
@@ -226,6 +246,11 @@ body::-webkit-scrollbar {
 
     nav {
         display: none;
+    }
+
+    .nav-notifications {
+        display: flex;
+        justify-content: end;
     }
 
     .perfil {
@@ -284,11 +309,6 @@ body::-webkit-scrollbar {
         width: 704px;
     }
 
-    .lupa {
-        top: 37%;
-        left: 88%;
-    }
-
     .sq__imagem {
         width: 225px;
     }
@@ -320,6 +340,11 @@ body::-webkit-scrollbar {
 
     nav {
         display: none;
+    }
+
+    .nav-notifications {
+        display: flex;
+        justify-content: end;
     }
 
     .perfil {
@@ -380,11 +405,6 @@ body::-webkit-scrollbar {
 
     .search {
         width: 270px;
-    }
-
-    .lupa {
-        top: 57.1%;
-        left: 80.5%;
     }
 
     .sq__imagens {
